tests/ui/type-alias-impl-trait/generic_duplicate_param_use5.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use5.rs:16:45
   |
LL | fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |                                             ^^^^^^^^^ expected `(T, U)`, got `(U, T)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use5.rs:11:43
   |
LL | fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |                                           ^^^^^^^^^

error: aborting due to 1 previous error

